# srvpru

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cargo.toml  todo  ygopro
config/: deck_report.toml  dialogue.json  must_start.toml  newspeak.yaml  reconnect.toml  result_report.toml  room_list.toml  srvpru.yaml  tip.json  version_checker.json  version_checker.toml  welcome.toml  windbot.yaml
scanner/: Cargo.toml
scanner/src/: lib.rs  mod_expander.rs  serde.rs  struct_mapper.rs
src/: main.rs  srvpro.rs  srvpru.rs  ygopro.rs
src/srvpru/: config.rs  i18n.rs  message.rs  player.rs  plugins.rs  processor.rs  room.rs  server.rs  structs.rs  utils.rs
src/srvpru/plugins/: anonymous_opponent.rs  arena.rs  base.rs  debugger.rs  deck_recorder.rs  deck_report.rs  delayed_replay.rs  dialogue.rs  heartbeat.rs  lock_deck.rs  lp_recorder.rs  max_rooms_count.rs  mc_login.rs  miniluv.rs  must_start.rs  newspeak.rs  no_roping.rs  position_recorder.rs  random_match.rs  reconnect.rs  recorder.rs  result_report.rs  room_list.rs  stage_recorder.rs  telescreen.rs  tip.rs  tournament.rs  version_checker.rs  virtual_password.rs  welcome.rs  windbot.rs
src/srvpru/plugins/base/: api.rs  chat_command.rs
src/srvpru/plugins/recorder/: deck_recorder.rs  position_recorder.rs  stage_recorder.rs
src/ygopro/: constants.rs  data.rs  message.rs
src/ygopro/message/: constants.rs  ctos.rs  game_message.rs  greedy_vec.rs  greedy_vector.rs  mapped_struct.rs  sequence.rs  stoc.rs  structs.rs  utils.rs
srvpru/: .gitignore  Cargo.toml
srvpru-build-utils/: Cargo.toml
srvpru-build-utils/src/: lib.rs
srvpru-proc-macros/: Cargo.toml
srvpru-proc-macros/src/: attachment.rs  configuration.rs  handler_http.rs  handler_ygopro.rs  lib.rs  mod_expander.rs  serde.rs  struct_mapper.rs  utils.rs
srvpru/config/: srvpru.json  welcome.json
srvpru/src/: main.rs  srvpro.rs
srvpru/src/srvpro/: api.rs  attachment.rs  configuration.rs  context.rs  handler.rs  handler_extension.rs  message.rs  player.rs  plugin.rs  processor.rs  room.rs  server.rs
srvpru/src/srvpro/plugin/: debugger.rs  delayed_replay.rs  welcome.rs
ygopro/: Cargo.toml  build.rs
ygopro/src/: constants.rs  data.rs  lib.rs  message.rs  serde.rs  utils.rs
ygopro/src/data/: deck.rs  lflist.rs  replay.rs
ygopro/src/message/: client_to_server.rs  game_message.rs  server_to_client.rs  utils.rs
ygopro/src/serde/: de.rs  error.rs  len.rs  raw.rs  ser.rs
