[package]
name = "srvpru"
version = "0.1.0"
edition = "2021"
authors = ["IamI <xinguangyao@gmail.com>"]

[workspace]
members = ["scanner"]

[dependencies]
# Rust should have, but need crates.
parking_lot = { version = "0.11", features = ["send_guard", "serde"] } # Mutex
tokio = { version = "1.11.0", features = ["full"] }                    # Async
chrono = { version = "0.4", features = ["serde"] }                     # Time
downcast-rs = "1.2.0"   # Downcast
lazy_static = "1.4.0"   # Singleton / Static
once_cell = "1.8.0"     # Singleton / Static
encoding_rs = "0.8.28"  # Encoding
num_enum = "0.5.4"      # Enum as number
anyhow = "1.0"          # Error
thiserror = "1.0"       # Error

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1"
erased-serde = "0.3.16"
bincode = "1"
serde_json = "1.0"
serde_yaml = "0.8.21"
toml = "0.5.8"

# Logger
log = "0.4"
pretty_env_logger = "0.4.0"

# Http
reqwest = "0.11.5"
axum = "0.2.8"

# Proc macro
scanner = { path = "./scanner" }
