[package]
name = "srvpru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
http = "0.2.8"
httparse = "1.8"
tower = "0.4.13"
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }

parking_lot = { version = "0.12.1", features = ["send_guard", "serde"] } # Mutex
once_cell = "1.8.0" 
async-trait = "0.1.57"
pin-project-lite = "0.2.9"
ctor = "0.1.26"
arc-swap = "1.6.0"

log = "0.4"
pretty_env_logger = "0.4"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.93"

srvpru-proc-macros = { path = "../srvpru-proc-macros" }
ygopro = { path = "../ygopro" }
anyhow = "1.0.69"
