[package]
name = "ygopro"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1"
thiserror = "1.0"
bitflags = "1.3.2"
num_enum = "0.5.7"

serde = { version = "1.0", features = ["derive", "rc"] }
erased-serde = "0.3"
serde_repr = "0.1"
byteorder = "1.4.3"
encoding_rs = "0.8.28"
lzma-rs = "0.2"

srvpru-proc-macros = { path = "../srvpru-proc-macros" }

[build-dependencies]
srvpru-build-utils = { path = "../srvpru-build-utils" }
syn = "1.0"
darling = "0.14"